--- a/customer-review.html
+++ b/customer-review.html
@@ -56,6 +56,7 @@
                         <i class="fa fa-star"></i>
                     </template>
                 </dom-repeat>
+                <template is="dom-repeat" items="{{items}}">jk</template>
             </div>
         </div>
 </div>
