--- a/customer-review.html
+++ b/customer-review.html
@@ -1,10 +1,10 @@
 
 <!-- Load the Polymer.Element base class -->
-<link rel="import" href="bower_components/polymer/polymer-element.html">
+<link rel="import" href="../polymer/polymer-element.html">
 
 <dom-module id="customer-review">
 <template>
-<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
 
 <style>
    
