--- a/customer-review.html
+++ b/customer-review.html
@@ -1,10 +1,10 @@
 
 <!-- Load the Polymer.Element base class -->
 <link rel="import" href="../polymer/polymer-element.html">
+<link rel="import" href="./bower_components/iron-icon/iron-icon.html">
 
 <dom-module id="customer-review">
 <template>
-<link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
 
 <style>
    
@@ -51,12 +51,9 @@
                     <i>{{comment}}</i>
                     <i class="fa fa-quote-right"></i>
                 </div>
-                <dom-repeat items="{{items}}">
-                    <template>
-                        <i class="fa fa-star"></i>
-                    </template>
-                </dom-repeat>
-                <template is="dom-repeat" items="{{items}}">jk</template>
+                <template is="dom-repeat" items="{{items}}">
+                    <iron-icon style="display: inline;" class="big" src="big_star.png"></iron-icon>
+                </template>
             </div>
         </div>
 </div>
