--- a/customer-reviews.html
+++ b/customer-reviews.html
@@ -1,10 +1,10 @@
 <!-- Load the Polymer.Element base class -->
 <link rel="import" href="../polymer/polymer-element.html">
 <link rel="import" href="customer-review.html" />
+<link rel="import" href="./bower_components/iron-icon/iron-icon.html" />
 <dom-module id="customer-reviews">
 
     <template>
-        <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
 
         <style>
             div.slots >::slotted(:not([selected])) {
@@ -81,7 +81,7 @@
             </div>
 
             <button class="navigateButton" id="nextButton">
-    <i on-click="next"  class="fa fa-arrow-right"></i>
+                <iron-icon on-click="next"  class="big" src="big_star.png"></iron-icon>
     </button>
         </div>
 
