--- a/customer-review.html
+++ b/customer-review.html
@@ -1,7 +1,7 @@
 
 <!-- Load the Polymer.Element base class -->
 <link rel="import" href="../polymer/polymer-element.html">
-<link rel="import" href="./bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../iron-icon/iron-icon.html">
 
 <dom-module id="customer-review">
 <template>
