--- a/demo/index.html
+++ b/demo/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 	Component will be shown here
+<customer-review name="John" 
+    address="London" 
+    comment="Another review! This time it is someting extrordinary"
+    rating="3">
+  </customer-review>
 </body>
 </html>
