--- a/customer-reviews.html
+++ b/customer-reviews.html
@@ -1,7 +1,7 @@
 <!-- Load the Polymer.Element base class -->
 <link rel="import" href="../polymer/polymer-element.html">
 <link rel="import" href="customer-review.html" />
-<link rel="import" href="../iron-icon/iron-icon.html" />
+<link rel="import" href="../iron-icons/iron-icons.html" />
 <dom-module id="customer-reviews">
 
     <template>
