iron icons added

--- a/customer-review.html
+++ b/customer-review.html
@@ -52,7 +52,8 @@
                     <i class="fa fa-quote-right"></i>
                 </div>
                 <template is="dom-repeat" items="{{items}}">
-                    <iron-icon style="display: inline;" class="big" src="big_star.png"></iron-icon>
+                    jk
+                    <iron-icon icon="chevron-left"></iron-icon>
                 </template>
             </div>
         </div>
