--- a/customer-reviews.html
+++ b/customer-reviews.html
@@ -80,9 +80,10 @@
                 <slot></slot>
             </div>
 
+                <iron-icon on-click="next" icon="chevron-left"></iron-icon>
+
             <button class="navigateButton" id="nextButton">
-                <iron-icon on-click="next"  class="big" src="big_star.png"></iron-icon>
-    </button>
+            </button>
         </div>
 
     </template>
