heading property added

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,10 +6,12 @@
 </head>
 <body>
 	Component will be shown here
+<customer-reviews title="What our customers are saying">
 <customer-review name="John" 
     address="London" 
     comment="Another review! This time it is someting extrordinary"
     rating="3">
   </customer-review>
+</customer-reviews>
 </body>
 </html>
