--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<customer-reviews animate="yes"> 
+<customer-reviews animate="yes" title="What our customers are saying"> 
   
-  <customer-review name="Mark"
+  <customer-review name="Brian"
     address="Wellington" 
     comment="Love the application, just so easy to use!"
     rating="5">
